syntax = "proto3";

package tester;

message Request {
  int32 sub_id = 1;
  int32 prob_id = 2;
  string exec_file_provider = 3;
  string test_file_provider = 4;
  repeated int32 test_case_id = 5;
  int32 max_cpu_time = 6;
  int32 max_memory = 7;
}

message Response {
  int32 sub_id = 1;
  ResultType result = 2;
  repeated TestCase test_case = 3;

  enum ResultType {
    ACCEPTED = 0;
    WRONG_ANSWER = 1;
    PRESENTATION_ERROR = 2;
    TIME_LIMIT_EXCEEDED = 3;
    MEMORY_LIMIT_EXCEEDED = 4;
    RUNTIME_ERROR = 5;
    SYSTEM_ERROR = 6;
  }

  message TestCase {
    int32 test_case_id = 1;
    ResultType result = 2;
    int32 cpu_time = 3;
    int32 memory = 4;
    int32 exit_code = 5;
    int32 signal = 6;
  }
}